[package]
name = "hnotify"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
mysql = "15.1"
chrono = "0.4"
sha2 = "0.9"
dirs = "3"
select = "0.6"
tokio = { version = "1", features = ["full"] }
scraper = "0.13"
reqwest = { version = "0.11", features = ["blocking"] }
ring = "0.16"
hex = "0.4"
